syntax = "proto3";

package com.github.im.common.connect.model.proto;
option java_package = "com.github.im.group.model.proto";
option java_outer_classname = "User";


message UserInfo{

  /**
   {@link UserInfo#getUsername}
   */
  string username = 1 ;

  int64 userId  = 2 ;

  string eMail = 3;

  string accessToken = 4;

  PlatformType platformType = 5 ;

}



enum PlatformType{

  WEB = 0;

  ANDROID = 1;

  IOS = 2;

  WINDOWS = 3;

  MAC = 4;

  LINUX = 5;


}
